--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\Scripts\Node.cs" />
+    <Compile Include="Assets\Scripts\GridMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
